--- a/MeetupXamarin.Android/MeetupXamarin.Android.csproj
+++ b/MeetupXamarin.Android/MeetupXamarin.Android.csproj
@@ -218,6 +218,12 @@
     <AndroidResource Include="Resources\layout\Event.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\memberlist_item.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\emptyview.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Icon.png" />
